Fix line break not showing in post show

--- a/client/src/components/Forum/PostShow.scss
+++ b/client/src/components/Forum/PostShow.scss
@@ -176,6 +176,7 @@ $light-white: lighten(map-get($colors, lightest), 8%);
     text-align: justify;
     font-size: .95rem;
     line-height: 1.4em;
+    white-space: pre-line;
 }
 
 /* Tags */
